# llmChallenge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
notebooks/: develop.ipynb
src/llmchallenge/: __init__.py  book_summary_combiner.py  chapter_summarizer.py  war_and_peace_segmenter.py
tests/: test_war_and_peace_segmenter.py
