[project]
name = "llmchallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.59.9",
]

[tool.uv]
dev-dependencies = [
    "notebook>=7.2.2",
    "pdoc>=14.7.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
    "sphinx>=8.0.2",
    "tox-uv>=1.15.0",
    "tox>=4.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "D",   # pydocstyle
    "A",   # builtins
    "RET", # returns
    "PTH", # pathlib instead of os
    "PL",  # pylint
    "PT",  # pytest-style
    "ANN",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001", "D104"]
"test*.py" = ["D", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"
